# CWT-Prediction

./: .env.example  ARCHITECTURE.md  README.md  crypto_prediction.db  predict.ps1  pyproject.toml  requirements.txt  run_hermes_prediction.py  run_prediction.py
crypto_prediction/: __init__.py  main.py
crypto_prediction/agents/: feedback_agent.py  market_data_agent.py  prediction_agent.py  risk_agent.py  search_agent.py  supervisor.py
crypto_prediction/database/: __init__.py  models.py  repository.py
crypto_prediction/hermes/: __init__.py  hermes_bootstrap.py  memory.py  multi_timeframe.py  supervisor.py
crypto_prediction/prediction/: __init__.py  kronos_service.py
crypto_prediction/providers/: __init__.py  base.py  binance_provider.py
crypto_prediction/risk/: __init__.py  kelly.py
crypto_prediction/routes/: market.py  predict.py
crypto_prediction/schemas/: config.py
crypto_prediction/services/: kalshi.py  polymarket.py
crypto_prediction/templates/: index.html
crypto_prediction/utils/: helpers.py  logger.py
cwt_prediction/: __init__.py  config.py  llm_client.py  logging_setup.py  main.py
cwt_prediction/data_fetcher/: __init__.py  base.py  binance_provider.py  coingecko_provider.py  models.py
cwt_prediction/feedback_loop/: __init__.py  models.py  recorder.py  resolver.py
cwt_prediction/forecaster/: __init__.py  kronos_wrapper.py  (+1 more)
data/: predictions.db
hermes_integration/: CONTEXT.md  SKILL.md  cron_setup.md
scratch/: test_dns.py
tests/: __init__.py  test_data_fetcher.py  test_forecaster.py  test_hermes.py  test_kelly.py  test_system.py
(+24 files in other folders)
